trunk/Archive2/9d/f471e5547e6fb3/output
main.cpp:21:18: error: use of undeclared identifier 'fun'
        const auto& a = fun<int>();
                        ^
main.cpp:21:25: error: expected '(' for function-style cast or type construction
        const auto& a = fun<int>();
                            ~~~^
main.cpp:21:27: error: expected expression
        const auto& a = fun<int>();
                                 ^
3 errors generated.
